feature - add oauth google authentication

--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -2,7 +2,7 @@ events {}
 
 http {
     server {
-        server_name api.localhost;
+        server_name localhost;
 
         root /var/www/html/public;
         index index.php index.html index.htm;
@@ -18,6 +18,11 @@ http {
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
 
+        location ^~ /.well-known/ {
+            allow all;
+            try_files $uri $uri/ /index.php?$query_string;
+        }
+
         location ~ /\. {
             deny all;
         }
@@ -29,7 +34,7 @@ http {
 
     server {
         listen 80;
-        server_name api.localhost;
+        server_name localhost;
 
         return 301 https://$host$request_uri;
     }
