--- a/.env.example
+++ b/.env.example
@@ -29,10 +29,12 @@ DB_CONNECTION=sqlite
 # DB_PASSWORD=
 
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
+
+JWT_PRIVATE_KEY_PATH=keys/jwt-private.pem
+JWT_PUBLIC_KEY_PATH=keys/jwt-public.pem
+JWT_ISSUER=auth-api
+JWT_TTL=900
+JWT_REFRESH_TTL=2592000
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
