chore - new nginx setup for multiple microservices

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,8 @@ JWT_PUBLIC_KEY_PATH=keys/jwt-public.pem
 JWT_ISSUER=auth-api
 JWT_TTL=900
 JWT_REFRESH_TTL=2592000
+JWT_KID=auth-api-1
+JWT_ALLOWED_CLIENTS=http://api.localhost, http://api.another.localhost
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
