--- a/.docker/compose/docker-compose.yml
+++ b/.docker/compose/docker-compose.yml
@@ -28,14 +28,13 @@ services:
       - .docker/nginx/certs:/etc/letsencrypt
       - .docker/nginx/logs:/var/log/nginx
       - .docker/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - .docker/nginx/conf.d:/etc/nginx/conf.d
       - .:/var/www/html
     ports:
       - "80:80"
       - "443:443"
     networks:
       - saasnet
-    depends_on:
-      - app
 
   database:
     image: postgres:16
